# lada

./: .dockerignore  .gitignore  .mailmap  CHANGELOG_MACOS.md  File  INSTALLATION_COMPLETE.md  PULL_REQUEST.md  README.md  launch_cli.sh  launch_gui.sh  pyproject.toml
.github/workflows/: build.yml  package.yml
configs/basicvsrpp/_base_/: default_runtime.py
docs/: linux_install.md  macOS_install.md  macos_install.md  training_and_dataset_creation.md  windows_install.md
lada/: __init__.py
lada/basicvsrpp/: inference.py
lada/basicvsrpp/mmagic/: basicvsr_plusplus_net.py  flow_warp.py
lada/bpjdet/: README.md  inference.py
lada/bpjdet/data/: JointBP_CrowdHuman_head.py
lada/bpjdet/models/: common.py  experimental.py  yolo.py
lada/bpjdet/utils/: augmentations.py  autoanchor.py  datasets.py  general.py  torch_utils.py
lada/centerface/: README.md  centerface.py
lada/cli/: main.py  remove_mosaic.py  utils.py
lada/datasetcreation/: nsfw_scene_detector.py  nsfw_scene_processor.py
lada/datasetcreation/detectors/: face_detector.py  head_detector.py  mosaic_classifier.py  mosaic_detector.py  nsfw_frame_detector.py  nudenet_nsfw_detector.py  watermark_detector.py
lada/deepmosaics/: inference.py
lada/deepmosaics/models/: loadmodel.py  model_util.py
lada/deepmosaics/util/: data.py
lada/gui/: __init__.py  application.py  frame_restorer_provider.py  main.py  missing_flatpak_extension_application.py  resources.gresource  resources.gresource.xml  style.css  utils.py  window.py  window.ui
lada/gui/config/: config.py  config_sidebar.py  config_sidebar.ui  encoding_preset_dialog.py  encoding_preset_dialog.ui  no_gpu_banner.py
lada/gui/export/: export_multiple_files_page.py  export_multiple_files_row.py  export_multiple_files_row.ui  export_single_file_page.py  export_single_file_page.ui  export_utils.py  export_view.py  export_view.ui  shutdown_manager.py  spinner_button.py  spinner_button.ui
lada/gui/fileselection/: file_selection_view.py
lada/gui/preview/: gstreamer_pipeline_appsrc.py  gstreamer_pipeline_manager.py  preview_view.py  seek_preview_popover.py  seek_preview_popover.ui
lada/gui/watch/: gstreamer_pipeline_appsrc.py  gstreamer_pipeline_manager.py  overlay_elements_controller.py  timeline.py  watch_view.py  watch_view.ui
lada/lib/: __init__.py  box_utils.py  face_detector.py  frame_restorer.py  head_detector.py  image_utils.py  mask_utils.py  mosaic_classifier.py  mosaic_detection_model.py  mosaic_detector.py  mosaic_frames_generator.py  mosaic_utils.py  nsfw_frame_detector.py  nsfw_scene_detector.py  nudenet_nsfw_detector.py  scene_utils.py  sequential_restoration.py  transforms.py  ultralytics_utils.py  video_utils.py  visualization_utils.py  watermark_detector.py
lada/models/basicvsrpp/: mosaic_video_dataset.py
lada/models/bpjdet/: inference.py
lada/models/bpjdet/models/: common.py  experimental.py  yolo.py
lada/models/bpjdet/utils/: general.py
lada/models/centerface/: centerface.py
lada/models/deepmosaics/: inference.py  mosaic_video_dataset.py
lada/models/deepmosaics/models/: BVDNet.py  loadmodel.py
lada/models/dover/: evaluate.py
lada/models/dover/datasets/: dover_datasets.py
lada/models/yolo/: yolo11_segmentation_model.py
lada/restorationpipeline/: __init__.py  basicvsrpp_mosaic_restorer.py  deepmosaics_mosaic_restorer.py  frame_restorer.py  mosaic_detector.py
lada/utils/: __init__.py  box_utils.py  encoding_presets.csv  image_utils.py  mask_utils.py  mosaic_utils.py  os_utils.py  scene_utils.py  threading_utils.py  torch_letterbox.py  transforms.py  ultralytics_utils.py  video_utils.py  visualization_utils.py
model_weights/: checksums_md5.txt  checksums_sha256.txt
packaging/: README.md
packaging/docker/: Dockerfile  Dockerfile.Latest  Dockerfile.Release  README.md  requirements.txt
packaging/flatpak/: README.md  convert-pylock-to-flatpak.py  io.github.ladaapp.lada.yaml  lada-python-dependencies.yaml
packaging/flatpak/extension_intel/: 010-intel-graphics-compiler-disable-werror.patch  io.github.ladaapp.lada.extensions.intel.metainfo.xml  io.github.ladaapp.lada.extensions.intel.yaml  python-dependencies.yaml
packaging/flatpak/main/: io.github.ladaapp.lada.desktop  io.github.ladaapp.lada.metainfo.xml  io.github.ladaapp.lada.yaml  python-dependencies.yaml
packaging/flatpak/share/: io.github.ladaapp.lada.metainfo.xml
packaging/flatpak/share/metainfo/: io.github.ladaapp.lada.metainfo.xml
packaging/macOS/: README.md  lada.spec  pyinstaller_runtime_hook_lada.py
packaging/windows/: README.md  lada.spec  package_executable.ps1  pyinstaller_runtime_hook_lada.py  requirements.txt
patches/: gvsbuild_ffmpeg.patch  gvsbuild_fix_svg_icons_not_showing.patch  remove_ultralytics_telemetry.patch  remove_use_of_torch_dist_in_mmengine.patch
scripts/: macos_m4_optimization.py  test_mps_compatibility.py
scripts/dataset_creation/: convert-dataset-labelme-to-yolo.py  convert-dataset-yolo-to-labelme.py  create-mosaic-detection-dataset.py  create-mosaic-restoration-dataset.py  create-watermark-detection-dataset.py  extract-video-frames.py
scripts/evaluation/: run-bj-classifier.py  run-yolo.py  validate-basicvsrpp.py  validate-deepmosaics.py  validate-yolo.py  view-yolo.py
scripts/training/: convert-weights-basicvsrpp-stage1-to-stage2.py  export-weights-basicvsrpp-stage2-for-inference.py  train-bj-classifier.py  train-mosaic-detection-yolo.py  train-mosaic-restoration-basicvsrpp.py  train-mosaic-restoration-deepmosaics.py  train-nsfw-detection-yolo.py  train-watermark-detection-yolo.py
translations/: README.md  compile_po.ps1  compile_po.sh  es.po  extract_csv_strings.py  fr.po  ja.po  ko.po  lada(zh_tw).pot  lada.pot  nl.po  release_ready_translations.txt  update_po.sh  update_pot.sh  zh_CN.po  zh_TW.po  zh_cn.po
