# SPDX-FileCopyrightText: Lada Authors
# SPDX-License-Identifier: AGPL-3.0

[project]
name = "lada"
description = "Remove and recover pixelated areas in adult videos"
dynamic = ["version"]
requires-python = ">=3.12.0"
license = "AGPL-3.0"
license-files = ["LICENSE.md", "LICENSES/*.txt"]
readme = "README.md"
dependencies = [
    "ultralytics==8.4.4", # Pinned as we apply a patch
    "numpy",
    "opencv-python",
    "av>=16.1.0", # Versions before 16.1.0 didn't come with support for QSV encoders needed for Lada Intel Arc support
    "mmengine==0.10.7", # Pinned as we apply a patch
    "tqdm",
#    "torch", # Declared in one of the extras instead
#    "torchvision", # Declared in one of the extras instead
    "wcwidth",
]

[project.urls]
homepage = "https://codeberg.org/ladaapp/lada"
source = "https://codeberg.org/ladaapp/lada"
documentation = "https://codeberg.org/ladaapp/lada/blob/main/README.md"
issues = "https://codeberg.org/ladaapp/lada/issues"
changelog = "https://codeberg.org/ladaapp/lada/releases"

[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project.scripts]
lada = "lada.gui.main:main"
lada-cli = "lada.cli.main:main"

[tool.setuptools]
packages = { find = { where = ["."], include = ["lada", "lada.*"] } }
[tool.setuptools.package-data]
"*" = ['*.ui']
"lada.gui" = ['style.css', 'resources.gresource']
"lada.locale" = ['*.mo']
"lada.utils" = ['encoding_presets.csv']

[tool.setuptools.dynamic]
version = { attr = "lada.VERSION" }

[project.optional-dependencies]
# Nvidia extras are still on 2.8 as 2.9.[01] causes a performance regression in DeepMosaics caused by conv3d regression in nvidia-cudnn.
# There would be a workaround though https://github.com/pytorch/pytorch/releases/tag/v2.9.1
# Will probably skip and wait for PyTorch 2.10 release
nvidia-legacy = ["torch==2.8.0", "torchvision==0.23.0"]
nvidia = ["torch==2.8.0", "torchvision==0.23.0"]
intel = ["torch==2.9.1", "torchvision==0.24.1", "pytorch-triton-xpu ; sys_platform == 'win32' or sys_platform == 'linux'"]
cpu = ["torch==2.9.1", "torchvision==0.24.1"]
gui = ["pycairo", "PyGObject"]

[dependency-groups]
dev = [
    { include-group = "training" },
    { include-group = "dataset-creation" }
]
gui-dev = ["pygobject-stubs"]
training = [
    "albumentationsx>=2.0.14", # Versions before 2.0.14 caused conflicts with opencv and needed workarounds
    "tensorboard>=2.20.0", # Versions before 2.20.0 were not compatible with Python >= 3.13 without workarounds
]
dataset-creation = ["lap>=0.5.12", "timm", "einops", "pillow", "scipy", "onnx", "onnxruntime-gpu"]
docker = ["opencv-python-headless"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-xpu"
url = "https://download.pytorch.org/whl/xpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv]
conflicts = [
      [
        { extra = "cpu" },
        { extra = "nvidia" },
      ],
      [
        { extra = "cpu" },
        { extra = "nvidia-legacy" },
      ],
      [
        { extra = "cpu" },
        { extra = "intel" },
      ],
      [
        { extra = "nvidia" },
        { extra = "nvidia-legacy" },
      ],
      [
        { extra = "nvidia" },
        { extra = "intel" },
      ],
      [
        { extra = "nvidia-legacy" },
        { extra = "intel" },
      ],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", extra = "nvidia" },
    { index = "pytorch-cu126", extra = "nvidia-legacy" },
    { index = "pytorch-xpu", extra = "intel" },
    { index = "pytorch-cpu", extra = "cpu" },
]
torchvision = [
    { index = "pytorch-cu128", extra = "nvidia" },
    { index = "pytorch-cu126", extra = "nvidia-legacy" },
    { index = "pytorch-xpu", extra = "intel" },
    { index = "pytorch-cpu", extra = "cpu" },
]
pytorch-triton-xpu = [
  { index = "pytorch-xpu", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]